[package]
name = "giant-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.0", features = ["derive"] }
dirs = "4.0.0"
fuse = "0.3.1"
libc = "0.2.118"
reqwest = "0.11.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.15.0", features = ["full"] }
time = "0.1.38"